# normet-py

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  ci_check.sh  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: build-gui.yml  ci.yml  pypi.yml
docs/: api.rst  conf.py  index.rst  roadmap.md
docs/_templates/autosummary/: class.rst  module.rst
docs/guide/: examples_caching.md  examples_data_adapters.md  examples_decomposition.md  examples_feature_engineering.md  examples_multisite.md  examples_normalisation.md  examples_openaq.md  examples_plotting.md  examples_scm.md  examples_scm_guide.md
notebooks/: 01_deweathering_and_adaptive_convergence.ipynb  02_decomposition_and_rolling.ipynb  03_scm_ulez.ipynb  04_transport_aware_normalisation.ipynb  1.AutoML training.ipynb  2.Weather Normalisation.ipynb  3.Time Series Decomposition.ipynb  4.Counterfactual Modelling.ipynb  5.feature_engineering.ipynb  _synth.py
packaging/: README.md  launcher.py  normet_gui.spec
packaging/linux/: build_appimage.sh
packaging/macos/: build_dmg.sh
packaging/windows/: installer.iss
src/normet/: __init__.py  cli.py  datasets.py  exceptions.py  plotting.py  report.py
src/normet/analysis/: __init__.py  decomposition.py  events.py  normalise.py  pdp.py  rolling.py
src/normet/backends/: __init__.py  flaml_backend.py  lgb_backend.py
src/normet/causal/: __init__.py  _common.py  bands.py  batch.py  bayesian_scm.py  diagnostics.py  inference.py  mlscm.py  panel.py  placebo.py  run_scm.py  scm.py  variants.py
src/normet/gui/: __init__.py  __main__.py  _multiscale.py  _settings.py  app.py  data_window.py  main_window.py  scm_window.py  trajectory_window.py
src/normet/io/: __init__.py  _http.py  defra.py  eea.py  era5.py  gdas.py  openaq.py  openmeteo.py  trajectory.py
src/normet/model/: __init__.py  io.py  predict.py  train.py
src/normet/pipeline/: __init__.py  do_all.py  interface.py  multisite.py
src/normet/utils/: __init__.py  _config.py  _lazy.py  cache.py  cv.py  featureeng.py  features.py  logging.py  metrics.py  prepare.py  provenance.py  validate.py
tests/: conftest.py  test_analysis_decomposition.py  test_analysis_normalise.py  test_analysis_normalise_auto.py  test_analysis_pdp.py  test_analysis_rolling.py  test_analyze_lag.py  test_bands.py  test_bayesian_scm_structure.py  test_cache.py  test_causal_common.py  test_cli.py  test_cv.py  test_data_adapters.py  test_datasets.py  test_decomposition_invariants.py  test_diagnostics.py  test_events.py  test_featureeng.py  test_gdas.py  test_gui_decomp_plots.py  test_gui_frozen_runtime.py  test_gui_multiscale.py  test_gui_smoke.py  test_http.py  test_imports.py  test_inference.py  test_integration_sklearn.py  test_io_extended.py  test_io_openmeteo.py  test_lgb_backend.py  test_logging.py  test_metrics.py  test_model_io.py  test_model_predict.py  test_model_train.py  test_multisite.py  test_normalise_smoke.py  test_pipeline_do_all_unc.py  test_placebo.py  (+11 more)
tests/manual/: smoke_normalise_auto_series.py
